k8-todo-app/manifests/project-todo.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: project-todo
  labels:
    name: project-todo
